--- a/b4d3n.html
+++ b/b4d3n.html
@@ -64,13 +64,13 @@
 
                      <ul class="dropdown__menu">
                        <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="/b3d2n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 3D2N
                            </a>                          
                        </li>
                         
                         <li>
-                           <a href="/b4d3n.html" class="dropdown__link">
+                           <a href="#" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 4D3N
                            </a>                          
                         </li>
@@ -135,21 +135,21 @@
                     <div class="boxpckg">
                      <h4 class="infopckg">PRICE PACKAGE</h4>
                      <div class="details1">
-                        <P><i class="ri-price-tag-3-fill"></i> 2 - 3 PAX IDR  2.250.000 /PAX</P>
-                        <P><i class="ri-price-tag-3-fill"></i> 4 - 6 PAX IDR  1.980.000 /PAX</P>
-                        <P><i class="ri-price-tag-3-fill"></i> 7 - 10 PAX IDR  1.775.000 /PAX</P>
-                        <P><i class="ri-price-tag-3-fill"></i> 11 - 15 PAX IDR  1.630.000 /PAX</P>
-                        <P><i class="ri-price-tag-3-fill"></i> 16 - 21 PAX IDR  1.515.000 /PAX</P>
-                        <P><i class="ri-price-tag-3-fill"></i> BIG GROUP ( 30>)	IDR  1.344.000 /PAX</P>
+                        <P><i class="ri-price-tag-3-fill"></i> 2 - 3 PAX IDR  2.952.000 /PAX</P>
+                        <P><i class="ri-price-tag-3-fill"></i> 4 - 6 PAX IDR  2.660.000 /PAX</P>
+                        <P><i class="ri-price-tag-3-fill"></i> 7 - 10 PAX IDR  2.508.000 /PAX</P>
+                        <P><i class="ri-price-tag-3-fill"></i> 11 - 15 PAX IDR  2.467.000 /PAX</P>
+                        <P><i class="ri-price-tag-3-fill"></i> 16 - 21 PAX IDR  2.319.000 /PAX</P>
+                        <P><i class="ri-price-tag-3-fill"></i> BIG GROUP ( 30>)	IDR  1.971.000 /PAX</P>
                     </div>
                         <h4 class="infopckg">WITH HOTEL & BREAKFAST</h4>
                         <div class="details1">
-                            <P><i class="ri-price-tag-3-fill"></i> 2 - 3 PAX IDR  3.075.000 /PAX</P>
-                            <P><i class="ri-price-tag-3-fill"></i> 4 - 6 PAX IDR  2.805.000 /PAX</P>
-                            <P><i class="ri-price-tag-3-fill"></i> 7 - 10 PAX IDR  2.625.000 /PAX</P>
-                            <P><i class="ri-price-tag-3-fill"></i> 11 - 15 PAX IDR  2.480.000 /PAX</P>
-                            <P><i class="ri-price-tag-3-fill"></i> 16 - 21 PAX IDR  2.365.000 /PAX</P>
-                            <P><i class="ri-price-tag-3-fill"></i> BIG GROUP ( 30>)	IDR  2.194.000 /PAX</P>
+                            <P><i class="ri-price-tag-3-fill"></i> 2 - 3 PAX IDR  4.052.000 /PAX</P>
+                            <P><i class="ri-price-tag-3-fill"></i> 4 - 6 PAX IDR  3.858.000 /PAX</P>
+                            <P><i class="ri-price-tag-3-fill"></i> 7 - 10 PAX IDR  3.608.000 /PAX</P>
+                            <P><i class="ri-price-tag-3-fill"></i> 11 - 15 PAX IDR  2.567.000 /PAX</P>
+                            <P><i class="ri-price-tag-3-fill"></i> 16 - 21 PAX IDR  3.419.000 /PAX</P>
+                            <P><i class="ri-price-tag-3-fill"></i> BIG GROUP ( 30>)	IDR  3.194.000 /PAX</P>
                         </div>
                         <!-----DETAILS----->
                         <h4 class="infopckg">WHAT INCLUSION ?</h4>
@@ -183,34 +183,38 @@
                  </div>
                  <!-------ITENERARY --------->
                  
-                 <div class="boxday">
+                 <div class="boxday2">
                   <h2 class="tittlebox">ITENERARY</h2>
                   <!--DAY 1-->
                      <h4 class="infopckg">DAY 1</h4>
                      <div class="details1">
                       <P><i class="ri-map-pin-2-line"></i> Pickup Airport</P>
-                      <P><i class="ri-map-pin-2-line"></i> South area 1-2 free choice:</P>
-                      <P><i class="ri-arrow-right-double-line"></i> Uluwatu temple </P>
-                      <P><i class="ri-arrow-right-double-line"></i> Pandawa beach </P>
-                      <P><i class="ri-arrow-right-double-line"></i> Melasti beach</P>
-                      <p><i class="ri-map-pin-2-line"></i> Check in hotel </p>
+                      <P><i class="ri-map-pin-2-line"></i> Check in Hotel</P>
                      </div>
-                   <!--DAY 3-->
+                   <!--DAY 2-->
                    <h4 class="infopckg">DAY 2</h4>
                    <div class="details1">
                      <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel</P>
-                     <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00</P>
+                     <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00 AM</P>
                      <P><i class="ri-map-pin-2-line"></i> Atv or rafting</P>
-                     <P><i class="ri-map-pin-2-line"></i> Lunch</P>
-                     <P><i class="ri-map-pin-2-line"></i> Ubud area sightseeing (1-2 area free choice):</p>
-                        <p><i class="ri-arrow-right-double-line"></i>Campuhan ridge walk</p>
-                        <p><i class="ri-arrow-right-double-line"></i>Saraswati temple</p>
-                        <p><i class="ri-arrow-right-double-line"></i>Tegalalang rice field</p>
-                        <p><i class="ri-arrow-right-double-line"></i>Monkey forest centuary</p>
-                        <p><i class="ri-arrow-right-double-line"></i>Batuan temple</p>
+                     <P><i class="ri-map-pin-2-line"></i> Lunch (FREE)</P>
                      <p><i class="ri-map-pin-2-line"></i> Coffe plantation</p>
-                     <p><i class="ri-map-pin-2-line"></i> Tegenungan waterfall</p>
-                     <p><i class="ri-map-pin-2-line"></i> Dinner/back to hotel</p>
+                     <p><i class="ri-arrow-right-double-line"></i> Tegenungan waterfall, OR</p>
+                     <p><i class="ri-arrow-right-double-line"></i> Dance peformance at ubud palace ( 25 mnt )</p>
+                     <p><i class="ri-map-pin-2-line"></i> Dinner / back to hotel</p>
+                  </div>
+                  <!--DAY 3-->
+                  <h4 class="infopckg">DAY 3</h4>
+                  <div class="details1">
+                     <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel</P>
+                     <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00 AM</P>
+                     <P><i class="ri-map-pin-2-line"></i> Tanah Lot Temple</P>
+                     <P><i class="ri-map-pin-2-line"></i> Lunch</P>
+                     <P><i class="ri-map-pin-2-line"></i> South area 1 or 2 free choice:</P>
+                     <p><i class="ri-arrow-right-double-line">Garuda Wisnu Kencana</i></p>
+                     <p><i class="ri-arrow-right-double-line">Melasti beach + Kecak Dance</i></p>
+                     <p><i class="ri-arrow-right-double-line">Balangan Beach</i></p>
+                     <p><i class="ri-map-pin-2-line"></i> Dinner / back to hotel</p>
                      <p><h5>OR</h5></p>
                      <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel</P>
                      <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00 AM / check out hotel</P>
@@ -222,14 +226,23 @@
                      <P><i class="ri-arrow-right-double-line"></i> Leke-leke waterfall or,</P>
                      <P><i class="ri-arrow-right-double-line"></i> Jatiluwih rice field or,</P>
                      <P><i class="ri-arrow-right-double-line"></i> Tanah lot temple</P>
-                     <p><i class="ri-map-pin-2-line"></i> Go back hotel / check in other hotel</p>
+                     <p><i class="ri-map-pin-2-line"></i> go back hotel / check in other hotel</p>
+                     <p><h5>OR</h5></p>
+                     <P><i class="ri-map-pin-2-line"></i> Take away breakfast</P>
+                     <P><i class="ri-map-pin-2-line"></i> Pick up on 06.15 AM</P>
+                     <P><i class="ri-map-pin-2-line"></i> West Penida trip</P>
+                     <P><i class="ri-arrow-right-double-line"></i> Kelingking beach</P>
+                     <P><i class="ri-arrow-right-double-line"></i> Lunch</P>
+                     <P><i class="ri-arrow-right-double-line"></i> Broken Beach</P>
+                     <P><i class="ri-arrow-right-double-line"></i> Crystal bay</P>
+                     <p><i class="ri-map-pin-2-line"></i> Arrive at harbour on 04.30 PM</p>
+                     <p><i class="ri-map-pin-2-line"></i> Dinner / Back to hotel</p>
                    </div>  
-                  <!--DAY 3-->
-                     <h4 class="infopckg">DAY 3</h4>
+                  <!--DAY 4-->
+                     <h4 class="infopckg">DAY 4</h4>
                      <div class="details1">
                         <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel </P>
-                        <P><i class="ri-map-pin-2-line"></i> Check out hotel on 08.00 AM </P>
-                        <P><i class="ri-arrow-right-double-line"></i> Tanah lot temple or,</P>
+                        <P><i class="ri-map-pin-2-line"></i> Check out hotel on 08.00 </P>
                         <P><i class="ri-arrow-right-double-line"></i> Art shopping center</P>
                         <P><i class="ri-map-pin-2-line"></i> Drop airport </P>
                      </div>
