--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                        </li>
                         
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="b4d3n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 4D3N
                            </a>                          
                         </li>
