--- a/b3d2n.html
+++ b/b3d2n.html
@@ -76,13 +76,13 @@
                         </li>
 
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="/b5d4n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 5D4N
                            </a>                          
                         </li>
 
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="/b6d5n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 6D5N
                            </a>                          
                         </li>
@@ -169,7 +169,7 @@
                         <div class="details1">
                          <p><i class="ri-bookmark-fill"></i> The itenerery applied is ajusted BY the flight schedule </p>
                          <P><i class="ri-bookmark-fill"></i> Flexible and highly modifiable itinerary </P>
-                         <p><i class="ri-bookmark-fill"></i> 12hours for fullday trip </p>
+                         <p><i class="ri-bookmark-fill"></i> 12 hours for fullday trip </p>
                          <P><i class="ri-bookmark-fill"></i> 6 hours for halfday </P>
                         </div>
                         <!-------EXCLUDE--------->
@@ -193,12 +193,12 @@
                       <P><i class="ri-arrow-right-double-line"></i> Uluwatu temple </P>
                       <P><i class="ri-arrow-right-double-line"></i> Pandawa beach </P>
                       <P><i class="ri-arrow-right-double-line"></i> Melasti beach</P>
-                      <p><i class="ri-map-pin-2-line"></i> Check in hotel </p>
+                      <p><i class="ri-map-pin-2-line"></i> Check in Hotel </p>
                      </div>
                    <!--DAY 3-->
                    <h4 class="infopckg">DAY 2</h4>
                    <div class="details1">
-                     <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel</P>
+                     <P><i class="ri-map-pin-2-line"></i> Breakfast at Hotel</P>
                      <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00</P>
                      <P><i class="ri-map-pin-2-line"></i> Atv or rafting</P>
                      <P><i class="ri-map-pin-2-line"></i> Lunch</P>
@@ -210,10 +210,10 @@
                         <p><i class="ri-arrow-right-double-line"></i>Batuan temple</p>
                      <p><i class="ri-map-pin-2-line"></i> Coffe plantation</p>
                      <p><i class="ri-map-pin-2-line"></i> Tegenungan waterfall</p>
-                     <p><i class="ri-map-pin-2-line"></i> Dinner/back to hotel</p>
+                     <p><i class="ri-map-pin-2-line"></i> Dinner/back to Hotel</p>
                      <p><h5>OR</h5></p>
                      <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel</P>
-                     <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00 AM / check out hotel</P>
+                     <P><i class="ri-map-pin-2-line"></i> Pick up on 08.00 AM / check out Hotel</P>
                      <P><i class="ri-map-pin-2-line"></i> West area 3 + 1 waterfall free choice:</P>
                      <P><i class="ri-arrow-right-double-line"></i> Handara gate or,</P>
                      <P><i class="ri-arrow-right-double-line"></i> Ulundanu beratan temple</P>
@@ -222,16 +222,16 @@
                      <P><i class="ri-arrow-right-double-line"></i> Leke-leke waterfall or,</P>
                      <P><i class="ri-arrow-right-double-line"></i> Jatiluwih rice field or,</P>
                      <P><i class="ri-arrow-right-double-line"></i> Tanah lot temple</P>
-                     <p><i class="ri-map-pin-2-line"></i> Go back hotel / check in other hotel</p>
+                     <p><i class="ri-map-pin-2-line"></i> Go back hotel / check in other Hotel</p>
                    </div>  
                   <!--DAY 3-->
                      <h4 class="infopckg">DAY 3</h4>
                      <div class="details1">
                         <P><i class="ri-map-pin-2-line"></i> Breakfast at hotel </P>
-                        <P><i class="ri-map-pin-2-line"></i> Check out hotel on 08.00 AM </P>
+                        <P><i class="ri-map-pin-2-line"></i> Check out Hotel on 08.00 AM </P>
                         <P><i class="ri-arrow-right-double-line"></i> Tanah lot temple or,</P>
                         <P><i class="ri-arrow-right-double-line"></i> Art shopping center</P>
-                        <P><i class="ri-map-pin-2-line"></i> Drop airport </P>
+                        <P><i class="ri-map-pin-2-line"></i> Drop Airport </P>
                      </div>
                   </div>
                
