--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                         </li>
 
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="b5d4n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 5D4N
                            </a>                          
                         </li>
 
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="b6d5n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 6D5N
                            </a>                          
                         </li>
