--- a/b3d2n.html
+++ b/b3d2n.html
@@ -70,19 +70,19 @@
                        </li>
                         
                         <li>
-                           <a href="/b4d3n.html" class="dropdown__link">
+                           <a href="b4d3n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 4D3N
                            </a>                          
                         </li>
 
                         <li>
-                           <a href="/b5d4n.html" class="dropdown__link">
+                           <a href="b5d4n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 5D4N
                            </a>                          
                         </li>
 
                         <li>
-                           <a href="/b6d5n.html" class="dropdown__link">
+                           <a href="b6d5n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 6D5N
                            </a>                          
                         </li>
