--- a/b4d3n.html
+++ b/b4d3n.html
@@ -64,7 +64,7 @@
 
                      <ul class="dropdown__menu">
                        <li>
-                           <a href="/b3d2n.html" class="dropdown__link">
+                           <a href="b3d2n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 3D2N
                            </a>                          
                        </li>
@@ -76,7 +76,7 @@
                         </li>
 
                         <li>
-                           <a href="/b5d4n.html" class="dropdown__link">
+                           <a href="b5d4n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 5D4N
                            </a>                          
                         </li>
