--- a/b5d4n.html
+++ b/b5d4n.html
@@ -64,13 +64,13 @@
 
                      <ul class="dropdown__menu">
                        <li>
-                           <a href="/b3d2n.html" class="dropdown__link">
+                           <a href="b3d2n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 3D2N
                            </a>                          
                        </li>
                         
                         <li>
-                           <a href="/b4d3n.html" class="dropdown__link">
+                           <a href="b4d3n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 4D3N
                            </a>                          
                         </li>
@@ -82,7 +82,7 @@
                         </li>
 
                         <li>
-                           <a href="/b6d5n.html" class="dropdown__link">
+                           <a href="b6d5n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 6D5N
                            </a>                          
                         </li>
