--- a/b6d5n.html
+++ b/b6d5n.html
@@ -64,19 +64,19 @@
 
                      <ul class="dropdown__menu">
                        <li>
-                           <a href="/b3d2n.html" class="dropdown__link">
+                           <a href="b3d2n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 3D2N
                            </a>                          
                        </li>
                         
                         <li>
-                           <a href="/b4d3n.html" class="dropdown__link">
+                           <a href="b4d3n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 4D3N
                            </a>                          
                         </li>
 
                         <li>
-                           <a href="/b5d4n.html" class="dropdown__link">
+                           <a href="b5d4n.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> BALI 5D4N
                            </a>                          
                         </li>
