--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                         </li>
 
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="penidareg.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> NUSA PENIDA REGULER TRIP
                            </a>                          
                         </li>
 
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="penidalux.html" class="dropdown__link">
                               <i class="ri-landscape-line"></i> NUSA PENIDA LUXURY TRIP
                            </a>                          
                         </li>
 
                        
                         <li>
-                           <a href="#" class="dropdown__link">
+                           <a href="otherpckg.html" class="dropdown__link">
                               <i class="ri-ship-2-line"></i> OTHER PACKAGE
                            </a>                          
                         </li>
