--- a/carpckgstd.html
+++ b/carpckgstd.html
@@ -135,7 +135,7 @@
                 <!-----------1------------>
                 <li class="item-a">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">AVANZA</p>
                         <!-----MODEL----->
                         <img src="assets/images/avanza.png" class="model">
@@ -153,7 +153,7 @@
                 <!-----------2------------>
                 <li class="item-b">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">AYLA / CAYLA</p>
                         <!-----MODEL----->
                         <img src="assets/images/ayla.png" class="model">
@@ -171,7 +171,7 @@
                 <!-----------3------------>
                 <li class="item-c">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">APV</p>
                         <!-----MODEL----->
                         <img src="assets/images/apv.png" class="model">
@@ -189,7 +189,7 @@
                 <!-----------4------------>
                 <li class="item-d">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">HIACE COMMUTER</p>
                         <!-----MODEL----->
                         <img src="assets/images/hiace.png" class="model">
@@ -207,7 +207,7 @@
                 <!-----------5------------>
                 <li class="item-e">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">BUS</p>
                         <!-----MODEL----->
                         <img src="assets/images/bus.png" class="model">
@@ -225,7 +225,7 @@
                 <!-----------6------------>
                 <li class="item-f">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">NEW AVANZA</p>
                         <!-----MODEL----->
                         <img src="assets/images/avanzanew.png" class="model">
@@ -243,7 +243,7 @@
                 <!-----------7------------>
                 <li class="item-g">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">GRAND INNOVA</p>
                         <!-----MODEL----->
                         <img src="assets/images/ginnova.png" class="model">
@@ -261,7 +261,7 @@
                 <!-----------8------------>
                 <li class="item-h">
                     <!-------SLIDER-BOX--------->
-                    <div class="box">
+                    <div class="boxstd">
                         <p class="standard">INNOVA REBORN</p>
                         <!-----MODEL----->
                         <img src="assets/images/innovar.png" class="model">
