--- a/b5d4n.html
+++ b/b5d4n.html
@@ -182,7 +182,9 @@
                         <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                  </div>
                  <!-------ITENERARY --------->
-                 
+                 <div class="photopckg">
+                  <img id="3d2n" src="/assets/images/package banner 5d4n.jpg" alt="BALI 3D2N">
+                  </div>
                  <div class="boxday3">
                   <h2 class="tittlebox">ITENERARY</h2>
                   <!--DAY 1-->
