--- a/otherpckg.html
+++ b/otherpckg.html
@@ -153,7 +153,12 @@
                         <P>*with term and condition apply</P>
                     </div>
                     <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
-
+                  </div>
+                  
+                  <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/LABUAN BAJO.png" alt="BALI 3D2N">
+                     </div>
+                  <div class="boxpckg2">
                     <h4 class="infopckg">AMAZING LABUAN BAJO 1 DAY TRIP</h4>
                     <br>
                     <h3 class="infopckgother">IDR 1.500.000 / PERSON</h3>
@@ -171,7 +176,12 @@
                         <P>*with term and condition apply</P>
                     </div>
                     <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                  </div>
 
+                  <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/BATUR SUNRISE ( Tlng tutup harganya dengan simbol spesial offer).jpg" alt="BALI 3D2N">
+                     </div>
+                  <div class="boxpckg2">
                     <h4 class="infopckgother"> BATUR SUNRISE TREKKING</h4>
                     <br>
                     <h3 class="infopckgother">IDR 600.000 / PERSON</h3>
@@ -188,7 +198,12 @@
                         <P>*with term and condition apply</P>
                     </div>
                     <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                  </div>
 
+                  <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/COOKING CLASS UBUD.jpg" alt="BALI 3D2N">
+                     </div>
+                  <div class="boxpckg2">
                     <h4 class="infopckgother"> COOKING CLASS UBUD</h4>
                     <br>
                     <h3 class="infopckgother">IDR 550.000 / PERSON</h3>
@@ -208,7 +223,12 @@
                         <P>*with term and condition apply</P>
                     </div>
                     <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
-                    
+                  </div>
+
+                  <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/UBUD SWING PACKAGE.png" alt="BALI 3D2N">
+                     </div>
+                  <div class="boxpckg2">
                     <h4 class="infopckgother"> UBUD SWING PACKAGE</h4>
                     <br>
                     <h3 class="infopckgother">IDR 850.000 / PERSON</h3>
