--- a/penidalux.html
+++ b/penidalux.html
@@ -132,6 +132,9 @@
                 <!-----------1------------>
                 <li class="item-a">
                     <!-------PRICE--------->
+                    <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/luxulary penida final.jpg" alt="BALI 3D2N">
+                     </div>
                   <div class="boxpckg4">
                      <h4 class="infopckgpenida">IDR 5.500.000 / PERSON</h4>
                      <br>
