--- a/penidareg.html
+++ b/penidareg.html
@@ -132,6 +132,9 @@
                 <!-----------1------------>
                 <li class="item-a">
                     <!-------PRICE--------->
+                    <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/west penida with snorkling.jpg" alt="BALI 3D2N">
+                     </div>
                   <div class="boxpckg3">
                      <h4 class="infopckgpenida">IDR 750.000 / PERSON</h4>
                      <BR>
