--- a/b6d5n.html
+++ b/b6d5n.html
@@ -191,7 +191,9 @@
                         <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                  </div>
                  <!-------ITENERARY --------->
-                 
+                 <div class="photopckg">
+                  <img id="3d2n" src="/assets/images/package banner 6d5n.jpg" alt="BALI 3D2N">
+                  </div>
                  <div class="boxday4">
                   <h2 class="tittlebox">ITENERARY</h2>
                   <!--DAY 1-->
