--- a/otherpckg.html
+++ b/otherpckg.html
@@ -132,6 +132,9 @@
                 <!-----------1------------>
                 <li class="item-a">
                     <!-------PRICE--------->
+                    <div class="photopckg">
+                     <img id="3d2n" src="/assets/images/ATV RAFTING PACKAGE.jpg" alt="BALI 3D2N">
+                     </div>
                   <div class="boxpckg2">
                      <h4 class="infopckgother">ATV + RAFTING + INFINITY POOL</h4>
                      <br>
