--- a/b5d4n.html
+++ b/b5d4n.html
@@ -183,7 +183,7 @@
                  </div>
                  <!-------ITENERARY --------->
                  <div class="photopckg">
-                  <img id="3d2n" src="/assets/images/package banner 5d4n.jpg" alt="BALI 3D2N">
+                  <img id="3d2n" src="assets/images/package banner 5d4n.jpg" alt="BALI 3D2N">
                   </div>
                  <div class="boxday3">
                   <h2 class="tittlebox">ITENERARY</h2>
