--- a/otherpckg.html
+++ b/otherpckg.html
@@ -133,7 +133,7 @@
                 <li class="item-a">
                     <!-------PRICE--------->
                     <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/ATV RAFTING PACKAGE.jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/ATV RAFTING PACKAGE.jpg" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg2">
                      <h4 class="infopckgother">ATV + RAFTING + INFINITY POOL</h4>
@@ -159,7 +159,7 @@
                   </div>
                   
                   <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/LABUAN BAJO.png" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/LABUAN BAJO.png" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckg">AMAZING LABUAN BAJO 1 DAY TRIP</h4>
@@ -182,7 +182,7 @@
                   </div>
 
                   <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/BATUR SUNRISE ( Tlng tutup harganya dengan simbol spesial offer).jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/BATUR SUNRISE ( Tlng tutup harganya dengan simbol spesial offer).jpg" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckgother"> BATUR SUNRISE TREKKING</h4>
@@ -204,7 +204,7 @@
                   </div>
 
                   <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/COOKING CLASS UBUD.jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/COOKING CLASS UBUD.jpg" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckgother"> COOKING CLASS UBUD</h4>
@@ -229,7 +229,7 @@
                   </div>
 
                   <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/UBUD SWING PACKAGE.png" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/UBUD SWING PACKAGE.png" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckgother"> UBUD SWING PACKAGE</h4>
