--- a/b4d3n.html
+++ b/b4d3n.html
@@ -183,7 +183,7 @@
                  </div>
                  <!-------ITENERARY --------->
                  <div class="photopckg">
-                  <img id="3d2n" src="/assets/images/package banner 4d3n.jpg" alt="BALI 3D2N">
+                  <img id="3d2n" src="assets/images/package banner 4d3n.jpg" alt="BALI 3D2N">
                   </div>
                  <div class="boxday2">
                   <h2 class="tittlebox">ITENERARY</h2>
