--- a/b6d5n.html
+++ b/b6d5n.html
@@ -192,7 +192,7 @@
                  </div>
                  <!-------ITENERARY --------->
                  <div class="photopckg">
-                  <img id="3d2n" src="/assets/images/package banner 6d5n.jpg" alt="BALI 3D2N">
+                  <img id="3d2n" src="assets/images/package banner 6d5n.jpg" alt="BALI 3D2N">
                   </div>
                  <div class="boxday4">
                   <h2 class="tittlebox">ITENERARY</h2>
