--- a/penidalux.html
+++ b/penidalux.html
@@ -133,7 +133,7 @@
                 <li class="item-a">
                     <!-------PRICE--------->
                     <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/luxulary penida final.jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/luxulary penida final.jpg" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg4">
                      <h4 class="infopckgpenida">IDR 5.500.000 / PERSON</h4>
