--- a/penidareg.html
+++ b/penidareg.html
@@ -133,7 +133,7 @@
                 <li class="item-a">
                     <!-------PRICE--------->
                     <div class="photopckg">
-                     <img id="3d2n" src="/assets/images/west penida with snorkling.jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/west penida with snorkling.jpg" alt="BALI 3D2N">
                      </div>
                   <div class="boxpckg3">
                      <h4 class="infopckgpenida">IDR 750.000 / PERSON</h4>
