--- a/gallery.html
+++ b/gallery.html
@@ -13,51 +13,64 @@
       <title>MAIKE VACATION BALI</title>
     </head>
     <body>
-        <div class="grid-wrapper">
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0005.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0006.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0007.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0008.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0009.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0010.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0011.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0012.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0013.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0014.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0015.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0016.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0017.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0018.jpg" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Gallery/IMG-20231227-WA0019.jpg" alt="">
+        <div class="container">
+             <h2 class="title">MAIKE BALI VACATION GALLERY</h2>
+             <div class="photo-gallery">
+                
+                <div class="column">
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0005.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0006.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0007.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0008.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0009.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0010.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0011.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0012.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0013.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0014.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0015.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0016.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0017.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0018.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="/assets/images/Gallery/IMG-20231227-WA0019.jpg" alt="">
+                    </div>
+                </div>
+
             </div>
         </div>
     </body>
