--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </li>
                   
 
-                  <li><a href="#" class="nav__link">Gallery</a></li>
+                  <li><a href="gallery.html" class="nav__link">Gallery</a></li>
 
                   <li><a href="#" class="nav__link">Testimonial</a></li>
 
