--- a/otherpckg.html
+++ b/otherpckg.html
@@ -159,7 +159,7 @@
                   </div>
                   
                   <div class="photopckg">
-                     <img id="3d2n" src="assets/images/LABUAN BAJO.png" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/LABUAN BAJO.png" alt="LABUAN BAJO">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckg">AMAZING LABUAN BAJO 1 DAY TRIP</h4>
