--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                   <li><i class="ri-bookmark-fill"></i> Payment details are attached in the email that is sent automatically.</li>
                   <li><i class="ri-bookmark-fill"></i> Cancellation / Delay / No-show of tourists, no refunds / returns in any form.</li>
                   <li><i class="ri-bookmark-fill"></i> For tourists who have made payments but are unable to participate, they are required to contact our Customer Service on D-5. The options we can provide are:
-                     <li><i class="ri-arrow-right-s-fill"></i> Change of tourists on the date of departure.</li>
-                     <li><i class="ri-arrow-right-s-fill"></i> Reschedule / Change of departure schedule</li>
+                  <li><i class="ri-arrow-right-s-fill"></i> Change of tourists on the date of departure.</li>
+                  <li><i class="ri-arrow-right-s-fill"></i> Reschedule / Change of departure schedule</li>
                   </li>
                   <li><i class="ri-bookmark-fill"></i> All programs are conditional and can change at any time due to any conditions.</li>
                   <li><i class="ri-bookmark-fill"></i> If there is a tourist destination that cannot be visited/done due to something that is not possible, it will be recommended to divert to the nearest route.</li>
@@ -237,11 +237,13 @@
                <h2>CONTACT US</h2> <br>
                <p>Whether you're planning your next dream vacation or have questions about our services, our dedicated team is here to assist you. Feel free to reach out to us through our website, email, or by phone.</p>
                <p class="subtitle">Join us on a journey of a lifetime with maike bali vacation!</p>
-               <i class="ri-facebook-circle-line"></i>
-               <i class="ri-whatsapp-line"></i>
-               <i class="ri-youtube-line"></i>
-               <i class="ri-mail-line"></i>
-               <i class="ri-tiktok-line"></i>
+               <div class="logo">
+               <a href="https://www.facebook.com/maikebalivacation" target="_blank"><i class="ri-facebook-circle-line ri-3x"></i></a>
+               <a href="https://wa.me/6287763118485" target="_blank"> <i class="ri-whatsapp-line ri-3x"></i></a>
+               <a href="#"><i class="ri-youtube-line ri-3x"></i></a>
+               <a href="#"><i class="ri-mail-line ri-3x"></i></a>
+               <a href="https://www.tiktok.com/@maikebalivacation" target="_blank"><i class="ri-tiktok-fill ri-3x"></i></a>
+               </div>
             </div>
          </div>
 
