--- a/gallery.html
+++ b/gallery.html
@@ -19,70 +19,70 @@
                 
                 <div class="column">
                     <div class="photo">
-                        <img src="/assets/images/Gallery/1.jpg" alt="">
+                        <img src="assets/images/Gallery/1.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/2.jpg" alt="">
+                        <img src="assets/images/Gallery/2.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/3.jpg" alt="">
+                        <img src="assets/images/Gallery/3.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/4.jpg" alt="">
+                        <img src="assets/images/Gallery/4.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/5.jpg" alt="">
+                        <img src="assets/images/Gallery/5.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/16.jpg" alt="">
+                        <img src="assets/images/Gallery/16.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/19.jpg" alt="">
-                    </div>
-                </div>
-
-                <div class="column">
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/6.jpg" alt="">
-                    </div>
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/7.jpg" alt="">
-                    </div>
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/8.jpg" alt="">
-                    </div>
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/9.jpg" alt="">
-                    </div>
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/10.jpg" alt="">
-                    </div>
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/17.jpg" alt="">
-                    </div>
-                    <div class="photo">
-                        <img src="/assets/images/Gallery/20.jpg" alt="">
+                        <img src="assets/images/Gallery/19.jpg" alt="">
                     </div>
                 </div>
 
                 <div class="column">
                     <div class="photo">
-                        <img src="/assets/images/Gallery/11.jpg" alt="">
+                        <img src="assets/images/Gallery/6.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/12.jpg" alt="">
+                        <img src="assets/images/Gallery/7.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/13.jpg" alt="">
+                        <img src="assets/images/Gallery/8.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/14.jpg" alt="">
+                        <img src="assets/images/Gallery/9.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/15.jpg" alt="">
+                        <img src="assets/images/Gallery/10.jpg" alt="">
                     </div>
                     <div class="photo">
-                        <img src="/assets/images/Gallery/18.jpg" alt="">
+                        <img src="assets/images/Gallery/17.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/Gallery/20.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="photo">
+                        <img src="assets/images/Gallery/11.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/Gallery/12.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/Gallery/13.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/Gallery/14.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/Gallery/15.jpg" alt="">
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/Gallery/18.jpg" alt="">
                     </div>
                 </div>
 
