--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </li>
                   
 
-                  <li><a href="gallery.html" target="blank" class="nav__link">Gallery</a></li>
+                  <li><a href="gallery.html" target="_blank" class="nav__link">Gallery</a></li>
 
                   <li><a href="#term" class="nav__link">Term and Condition</a></li>
 
