--- a/b3d2n.html
+++ b/b3d2n.html
@@ -179,7 +179,7 @@
                         <br>
                         <P>*with term and condition apply </P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                  </div>
                  <!-------ITENERARY --------->
                   <div class="photopckg">
