--- a/b4d3n.html
+++ b/b4d3n.html
@@ -179,11 +179,11 @@
                         <br>
                         <P>*with term and condition apply </P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                  </div>
                  <!-------ITENERARY --------->
                  <div class="photopckg">
-                  <img id="3d2n" src="assets/images/package banner 4d3n.jpg" alt="BALI 3D2N">
+                  <img id="3d2n" src="assets/images/package banner 4d3n.jpg" alt="BALI 4D3N">
                   </div>
                  <div class="boxday2">
                   <h2 class="tittlebox">ITENERARY</h2>
