--- a/b6d5n.html
+++ b/b6d5n.html
@@ -188,11 +188,11 @@
                         <br>
                         <P>*with term and condition apply </P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                  </div>
                  <!-------ITENERARY --------->
                  <div class="photopckg">
-                  <img id="3d2n" src="assets/images/package banner 6d5n.jpg" alt="BALI 3D2N">
+                  <img id="3d2n" src="assets/images/package banner 6d5n.jpg" alt="BALI 6D5N">
                   </div>
                  <div class="boxday4">
                   <h2 class="tittlebox">ITENERARY</h2>
