--- a/otherpckg.html
+++ b/otherpckg.html
@@ -133,7 +133,7 @@
                 <li class="item-a">
                     <!-------PRICE--------->
                     <div class="photopckg">
-                     <img id="3d2n" src="assets/images/ATV RAFTING PACKAGE.jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/ATV RAFTING PACKAGE.jpg" alt="ATV">
                      </div>
                   <div class="boxpckg2">
                      <h4 class="infopckgother">ATV + RAFTING + INFINITY POOL</h4>
@@ -155,7 +155,7 @@
                         <P><i class="ri-close-circle-fill"></i> Items not mentioned </P>
                         <P>*with term and condition apply</P>
                     </div>
-                    <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                    <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                   </div>
                   
                   <div class="photopckg">
@@ -178,11 +178,11 @@
                         <P><i class="ri-close-circle-fill"></i> Items not mentioned </P>
                         <P>*with term and condition apply</P>
                     </div>
-                    <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                    <button onclick="location.href='https://wa.me/6287763118485"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                   </div>
 
                   <div class="photopckg">
-                     <img id="3d2n" src="assets/images/BATUR SUNRISE ( Tlng tutup harganya dengan simbol spesial offer).jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/BATUR SUNRISE ( Tlng tutup harganya dengan simbol spesial offer).jpg" alt="BATUR">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckgother"> BATUR SUNRISE TREKKING</h4>
@@ -200,11 +200,11 @@
                         <P><i class="ri-close-circle-fill"></i> Items not mentioned </P>
                         <P>*with term and condition apply</P>
                     </div>
-                    <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                    <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                   </div>
 
                   <div class="photopckg">
-                     <img id="3d2n" src="assets/images/COOKING CLASS UBUD.jpg" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/COOKING CLASS UBUD.jpg" alt="COOKING CLASS">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckgother"> COOKING CLASS UBUD</h4>
@@ -225,11 +225,11 @@
                         <P><i class="ri-close-circle-fill"></i> Items not mentioned </P>
                         <P>*with term and condition apply</P>
                     </div>
-                    <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                    <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                   </div>
 
                   <div class="photopckg">
-                     <img id="3d2n" src="assets/images/UBUD SWING PACKAGE.png" alt="BALI 3D2N">
+                     <img id="3d2n" src="assets/images/UBUD SWING PACKAGE.png" alt="UBUD">
                      </div>
                   <div class="boxpckg2">
                     <h4 class="infopckgother"> UBUD SWING PACKAGE</h4>
@@ -248,7 +248,7 @@
                         <P><i class="ri-close-circle-fill"></i> Items not mentioned </P>
                         <P>*with term and condition apply</P>
                     </div>
-                    <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                    <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                   </div>
                
                 </li>
